--- a/project website/styles.css
+++ b/project website/styles.css
@@ -13,8 +13,16 @@ body {
     scroll-behavior: smooth;
 }
 
-/* Sticky header with smooth transition */
-/* Sticky header with smooth transition */
+
+#navi-bar{
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    color: #ecf5fa;
+    font-size: 20px;
+    font-weight: bold;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -124,6 +132,7 @@ nav ul li a:hover {
     max-width: 1200px; /* Set max-width to center the content */
     /* text-align: center; */
     opacity: 0;
+    text-align: justify;
     transform: translateY(30px); /* Initial position */
     transition: opacity 0.5s ease, transform 0.5s ease;
 }
@@ -174,7 +183,7 @@ nav ul li a:hover {
 /* Colorful table styles */
 .table-container {
     display: flex;
-    justify-content: center;
+    justify-content: auto;
     margin-top: 50px; /* Added margin */
 }
 
@@ -243,3 +252,4 @@ table.colorful-table tbody tr.yellow-row {
     margin-right: 10px;
     vertical-align: middle; 
 }
+
